Update auto-build setup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,9 @@ jobs:
 
       - name: Build application
         run: make
-
+        
+      - name: Test application
+        run: make test
+        
+      - name: Run test application
+        run: ./bin/test
